--- a/Memoria/capitulos/07_Implementacion.tex
+++ b/Memoria/capitulos/07_Implementacion.tex
@@ -251,15 +251,16 @@ Cuando el cliente recibe la respuesta del servidor, se comprueba si el código d
 La aplicación cuenta con una pantalla de registro para que los usuarios puedan registrarse en la aplicación. Para el registro, el usuario deberá introducir su nombre de usuario y su contraseña dos veces. Si el usuario ya tiene una cuenta, podrá iniciar sesión pulsando en el botón 'Iniciar sesión'. En la siguiente imagen se puede ver la pantalla de registro:
 
 
+
+\paragraph*{Vista}
+La vista del registro es muy similar a la del inicio de sesión. La única diferencia es que el formulario contiene un campo adicional para introducir la contraseña otra vez por razones de seguridad.
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.4\textwidth]{imagenes/c7/registro.png}
   \caption{Pantalla de registro de los usuarios donde se puede ver el formulario de registro con los campos de usuario (correo), contraseña y repetir la contraseña.}
   \label{fig:register}
 \end{figure}
-
-\paragraph*{Vista}
-La vista del registro es muy similar a la del inicio de sesión. La única diferencia es que el formulario contiene un campo adicional para introducir la contraseña otra vez por razones de seguridad.
 
 
 \paragraph*{Lógica}
@@ -292,28 +293,42 @@ Además, se ha añadido un timer que se encarga de cerrar la sesión automática
 \section{Funcionalidad de usuario}
 \label{sec:funcionalidad_usuario}
 
+
 \subsection{Lista de lecciones}
 \textit{Desarrollado en el Sprint 5}
-
 \label{sec:lista_lecciones}
+
+La aplicación cuenta con una lista de lecciones que el usuario puede ver. Esta lista es la pantalla inicial de la aplicación y el usuario la visualizará al iniciar sesión. También puede acceder a ella pulsando el botón \textit{Inicio} que se encuentra en el drawer (barra lateral) de la aplicación.
+
+
 \paragraph*{Vista}
-Para que el usuario pueda ver la lista de lecciones, se ha desarrollado un widget principal para la pantalla. Este widget contiene la ListaLecciones, que a su vez estará compuesta de una lista de widgets llamada LeccionItem. Cada uno de estos widgets contendrá la información principal de una lección, como el título y la imagen de perfil. Además, cada uno de estos widgets (LecciónItem) tendrá un botón para acceder a la lección. En la siguiente imagen se puede ver la pantalla de lista de lecciones: : 
+Para que el usuario pueda ver la lista de lecciones, se ha desarrollado un widget principal para la pantalla. Este widget contiene el widget \textit{ListaLecciones}, que contiene un componente para la distribución de widgets en una columna. Cada uno de estos widgets se llama \textit{LeccionItem} y contendrá la información principal de una lección, como el título y la imagen de perfil. En la siguiente figura se puede ver la pantalla de lista de lecciones:
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.4\textwidth]{imagenes/c7/pantprin.png}
-  \caption{Pantalla de inicio de sesión}
+  \caption{Pantalla de la lista de lecciones con el título y la imagen de cada lección.}
   \label{fig:login}
 \end{figure}
 
+\paragraph*{Lógica}
+Para la lógica de esta pantalla se ha utilizado el patrón de diseño \textit{Provider} para la gestión de estados. Un provider es un objeto que se encarga de gestionar el estado de la aplicación y proporcionarselo a los widgets que lo necesiten.
+En este caso, se ha utilizado para gestionar el estado de la lista de lecciones y se le ha llamado \textit{Lecciones}.
+Este Provider se encarga de obtener la lista de lecciones de la API (llamada HTTP con el verbo POST a la ruta (\textit{POST /api/lesson/get-lessons/\{id\}})) y almacenar cada uno de sus elementos en variables de la clase \textit{Lección}. Además, se ha creado un método público que devuelve la lista de lecciones. Este método se utiliza en el widget \textit{ListaLecciones} para obtener la lista de lecciones, añadir cada lección en forma de widget de forma iterativa
+ y mostrarla en pantalla. 
+
 \subsection{Lección} 
 \textit{Desarrollado en el Sprint 5}
-
 \label{sec:leccion}
+
+La aplicación cuenta con una vista para cada lección. Esta vista se puede acceder pulsando en el título o en la imagen de una lección en la lista de lecciones. En esta vista se puede ver el contenido de la lección, como el título, el texto, las imágenes, los vídeos, etc...
+Además, al final de la lección se puede hacer un test para comprobar los conocimientos adquiridos y revisar los tests realizados anteriormente por el usuario.
+
 \paragraph*{Vista}
-La vista de una lección proporciona al usuario información más detallada de esta. Primero se muestra la imagen de la lección y el título. A continuación, 
-se muestra el contenido de la lección en forma de texto, imágenes, vídeos, etc... Esto se ha conseguido construyendo widgets de forma dinámica dependiendo del tipo
-de contenido almacenado. Finalmente, se muestra un botón en pantalla para poder hacer un test. En la siguiente imagen se puede ver la pantalla de una lección:
+La vista de una lección proporciona al usuario información más detallada de esta. En primer lugar se muestra la imagen de la lección y el título en un componente para distribuir widgets en una fila. (Un widget \textit{Row} compuesto de un \textit{Text} y un \textit{Image} ).
+A continuación, se muestra el contenido de la lección en forma de texto, imágenes, vídeos, etc... Esto se ha conseguido construyendo widgets de forma dinámica dependiendo del tipo de contenido almacenado y añadiendolos a un widget distribuidor en columna (\textit{Column}).
+Finalmente, se muestra un botón en pantalla para poder hacer un test y otro para ver el historial de tests realizados, ambos mediante un widget \textit{ElevatedButton}.
+En la siguiente imagen se puede ver la pantalla de una lección:
 
 
 \begin{figure}[H]%
@@ -321,20 +336,47 @@ de contenido almacenado. Finalmente, se muestra un botón en pantalla para poder
   \subfloat[\centering Parte 1.]{{\includegraphics[width=0.44\textwidth]{imagenes/c7/leccion.png} }}%
   \qquad
   \subfloat[\centering Parte 2.]{{ \includegraphics[width=0.44\textwidth]{imagenes/c7/leccion2.png} }}%
-  \caption{Pantalla de una lección en concreto con los contenidos (títulos, texto, multimedia...) del temario.}%
+  \caption{Pantalla de una lección en concreto con los contenidos (títulos, texto, multimedia...) del temario y los dos botones relacionados con los tests.}%
   \label{fig:example}%
 \end{figure}
 
+\paragraph*{Lógica}
+Para la lógica de esta pantalla se ha utilizado el provider \textit{Lecciones} mencionado anteriormente. En este caso, el provider se encarga de obtener la lección que se quiere mostrar en pantalla de la lista de lecciones y devolverla al widget que la mostrará en pantalla.
+Además, se ha implementado una funcionalidad para poder construir el constenido de la lección de forma dinámica. Para esto se ha realizado un bucle que recorre el contenido de la lección y dependiendo del tipo de contenido, se construye un widget diferente. Por ejemplo, si el contenido es un texto, se construye un widget \textit{Text} y se añade a la lista de widgets que se devolverán al final del método. Si el contenido es una imagen, se construye un widget \textit{Image} y se añade a la lista de widgets que se devolverán al final del método. De esta forma 
+se consigue que el contenido de la lección se muestre en pantalla en función del tipo y facilitaremos la adición de contenido a cada lección por parte del profesor en un futuro.
+
 \subsection{Test}
 \label{sec:test}
+\textit{Desarrollado en el Sprint 6}
+
 La lección contiene un test que se puede realizar al final de la lección. Este test consta de una serie de preguntas que el usuario deberá responder.
 
-\subsubsection{Responder pregunta}
-\label{sec:pregunta}
 El usuario podrá responder a las preguntas de la siguiente forma: seleccionando una opción de la lista de opciones, seleccionando varias, escribiendo una respuesta en un campo de texto... El usuario podrá 
-responder la opción que desee y pasar a la siguiente pregunta. En las siguientes imagenes se pueden ver las pantallas de las distintas preguntas al contestarlas:
+responder la opción que desee y pasar a la siguiente pregunta. A continuación se muestran las diferentes preguntas que se pueden realizar en el test.
 
-\paragraph*{Pregunta de selección única}\mbox{}\\
+
+\paragraph*{Vista}
+La vista de un test consiste en una serie de preguntas que el usuario deberá responder. Al seleccionar el botón de \textit{Hacer Test} ubicado en la pantalla de la lección, se muestra la pantalla de un test.
+En esta pantalla se presenta una pregunta a la vez, y el usuario deberá responderla. Para pasar a la siguiente pregunta, pulsará la flecha ubicada a la derecha de la imagen y para retroceder a la pregunta anterior, pulsará la flecha izquierda.
+Esto se ha realizado mediante un widget que distribuye otros widget de forma horizontal en una fila (\textit{Row}). Este widget se encarga de mostrar la imagen de la pregunta actual y las flechas para pasar a la siguiente o anterior pregunta.
+
+Debajo de lo anterior, se mostrará la pregunta actual y las opciones de respuesta. Esto se ha realizado mediante un widget que distribuye otros widget de forma vertical en una columna (\textit{Column}). 
+Las opciones de respuesta dependerán del tipo de pregunta que se esté mostrando. Por ejemplo, si la pregunta es de selección única o múltiple, se muestra una lista de opciones de respuesta, mientras que si la pregunta es de entrada de texto, se muestra un campo de texto para que el usuario escriba su respuesta.
+
+En la última pregunta, aparece un botón para enviar las respuestas y ver el resultado del test. Est es para que el usuario no pueda enviar las respuestas antes de responder o pasar por todas las preguntas.
+
+\paragraph*{Lógica}
+Para la lógica de esta pantalla se ha utilizado el patrón de diseño \textit{Provider} para la gestión de estados. En este caso, se ha utilizado para gestionar el estado del test que se está realizando.
+Este Provider se encarga de obtener todas las preguntas del test de la API y almacenarlas en una lista privada. Para recorrer las preguntas, se ha utilizado un índice que se incrementa o decrementa en función de si el usuario quiere pasar a la siguiente o a la anterior pregunta. Este índice se almacena también en una variable privada e irá aumentando o disminuyendo en función de si el usuario quiere pasar a la siguiente pregunta o volver a la anterior.
+Cada vez que el usuario responde una pregunta, se almacenan las respuestas en una variable privada para conservarlas durante toda la navegación del test (si vuelve para atrás, por ejemplo) y se produce una retroalimentación al usuario cambiando el color de la opción a un azul más oscuro para que el usuario sepa qué opción ha respondido.
+
+Cuando el usuario pulsa el botón de enviar respuestas, se envían las respuestas al servidor para crear el test y añadirlo al progreso (se envía la petición HTTP a la ruta de la API \textit{POST /api/progress/create-test-and-progress/}:) y aparece la pantalla
+para ver el resultado del test.
+
+
+\newpage 
+
+\subsubsection{Pregunta de selección única.}\mbox{}\\
 
 \label{sec:pregunic1}
 \textit{Desarrollado en el Sprint 6}
@@ -352,7 +394,7 @@ A continuación se muestra la pantalla de una pregunta de selección única, en 
 
 \newpage
 
-\paragraph*{Pregunta de selección múltiple}\mbox{}\\
+\subsubsection{Pregunta de selección múltiple}\mbox{}\\
 
 \label{sec:pregunic1}
 \textit{Desarrollado en el Sprint 6}
@@ -372,7 +414,7 @@ A continuación se muestra la pantalla de una pregunta de selección múltiple, 
 
 \newpage
 
-\paragraph*{Pregunta de entrada de texto}\mbox{}\\
+\subsubsection{Pregunta de entrada de texto}
 
 \label{sec:pregunic1}
 \textit{Desarrollado en el Sprint 6}
@@ -388,9 +430,15 @@ A continuación se muestra la pantalla de una pregunta de entrada de texto, en l
   \label{fig:example}%
 \end{figure}
 
+
 \newpage
 
-\subsubsection{Resultado del test}\mbox{}\\
+\subsubsection{Resultado del test}
+\label{sec:pregunta}
+\textit{Desarrollado en el Sprint 6}
+
+A continuación se muestra la pantalla de resultado del test, en la que se muestra el número de aciertos y el porcentaje de aciertos respecto a las preguntas. Además, se muestra una barra de progreso que muestra el porcentaje de aciertos respecto al número de preguntas preguntas.
+
 \begin{figure}[H]%
   \centering
   \subfloat[\centering Resultado aprobado (50\% o más).]{{\includegraphics[width=0.45\textwidth]{imagenes/c7/porcentaje.png} }}%
@@ -400,11 +448,47 @@ A continuación se muestra la pantalla de una pregunta de entrada de texto, en l
   \label{fig:example}%
 \end{figure}
 
-\subsubsection{Revisar pregunta}
+\paragraph*{Vista}
+\label{sec:vista}
+
+Para realizar la vista de la pantalla se ha utilizado de nuevo el widget \textit{Column} para poder mostrar los elementos de la pantalla de forma vertical. 
+Dentro de dicho widget tendremos:
+\begin{itemize}
+  \item la imagen de la lección (widget \textit{Image}).
+  \item un campo de texto para mostrar el número de aciertos (widget \textit{Text}).
+  \item una barra de progreso para mostrar el porcentaje de aciertos (widget \textit{CircularPercentIndicator}). Para este test se ha utilizado la libreria de flutter \textit{percent\_indicator}.
+  \item un botón para poder revisar el test (widget \textit{ElevatedButton}).
+\end{itemize}
+
+\paragraph*{Lógica}
+\label{sec:logica}
+La lógica para mostrar el resultado del test es bastante sencilla. Se obtiene el número de aciertos y el número de preguntas del test al enviar el test al servidor, comparando las respuestas del usuario con las respuestas correctas almacenadas en cada una de las preguntas (estas últimas se obtienen mediante el Provider de las preguntas). 
+Una vez obtenidos estos datos, se calcula el porcentaje de aciertos.
+
+
+
+\subsection{Revisar pregunta}
 \label{sec:pregunta}
 El usuario podrá revisar las preguntas que haya contestado en un test. Como se puede ver en la pantalla anterior del resultado del test, existe un botón para poder revisar el test. El usuario podrá ver las preguntas que haya contestado y las respuestas que haya seleccionado con la validación de estas.
 
-\paragraph*{Pregunta de selección única}\mbox{}\\
+\paragraph*{Vista}
+\label{sec:vista}
+La vista de la pantalla de revisión de preguntas es muy similar a la vista de la pantalla de la pregunta. La diferencia es que en esta pantalla se muestran las respuestas que ha seleccionado el usuario y se muestra si son correctas o no.
+Por tanto, solo se han cambiado los colores de los botones y de los textos para mostrar si la respuesta es correcta o no (explicaré con más detalle esto en la sección de lógica).
+
+
+\paragraph*{Lógica}
+\label{sec:logica}
+La lógica para mostrar la revisión de las preguntas se ha realizado comparando las respuestas del usuario con las respuestas correctas almacenadas en cada una de las preguntas (estas últimas se obtienen mediante el Provider de las preguntas).
+
+Para mostrar si la respuesta es correcta o no, se ha cambiado el color del botón o del campo de texto. Si la respuesta es correcta, se muestra en verde, y si es incorrecta, se muestra en rojo. 
+
+Para la validación, se ha llamado a la función \textit{validarRespuesta} que se ha creado en la clase provider \textit{Preguntas}. Esta función comprueba si la(s) respuesta(s) del usuario de la pregunta actual coincide con la(s) respuesta(s) correcta(s) de la pregunta actual. Si coincide, se devuelve un valor booleano \textit{true}, y si no coincide, se devuelve un valor booleano \textit{false}.
+
+Para mostrar el color de los botones o de los campos de texto, se ha utilizado la función \textit{ternario} de Dart. Esta función recibe tres parámetros: una condición, un valor si la condición es \textit{true} y un valor si la condición es \textit{false}. En nuestro caso, la condición es la función \textit{validarRespuesta} que hemos creado antes. Si la condición es \textit{true}, se devuelve el color verde, y si es \textit{false}, se devuelve el color rojo.
+
+
+\subsubsection{Pregunta de selección única}
 \label{sec:pregunic1b}
 \textit{Desarrollado en el Sprint 6}
 
@@ -419,7 +503,7 @@ El usuario podrá revisar las preguntas que haya contestado en un test. Como se 
 
 \newpage
 
-\paragraph*{Pregunta de selección múltiple}\mbox{}\\
+\subsubsection{Pregunta de selección múltiple}\mbox{}\\
 \label{sec:pregunic1b}
 \textit{Desarrollado en el Sprint 6}
 
@@ -434,7 +518,7 @@ El usuario podrá revisar las preguntas que haya contestado en un test. Como se 
 
 \newpage
 
-\paragraph*{Pregunta de entrada de texto}\mbox{}\\
+\subsubsection{Pregunta de entrada de texto}\mbox{}\\
 
 \label{sec:pregunic1b}
 \textit{Desarrollado en el Sprint 6}
@@ -448,9 +532,6 @@ El usuario podrá revisar las preguntas que haya contestado en un test. Como se 
 \end{figure}
 
 \newpage
-
-
-
 
 
 
@@ -468,7 +549,7 @@ Se ha implementado una pantalla de dashboard para la gestión de la aplicación.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.4\textwidth]{imagenes/c7/dashboard.png}
-  \caption{Pantalla de dashboard}
+  \caption{Pantalla de dashboard del profesor con las opciones de gestión disponibles para el profesor.}
   \label{fig:login}
 \end{figure}
 
@@ -482,6 +563,6 @@ La lista de lecciones del profesor es muy similar a la del usuario. Las diferenc
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.4\textwidth]{imagenes/c7/listalecciones.png}
-  \caption{Pantalla de inicio de sesión}
+  \caption{Pantalla de lista de lecciones del profesor para la gestión de estas.} 
   \label{fig:login}
 \end{figure}
